Test2 JSON d3.min

--- a/Test2/index/index.html
+++ b/Test2/index/index.html
@@ -23,9 +23,10 @@
 	<div id="clearFloat"></div>
 	<div id="sideBar"></div>
 	<div id="contentContainer">
+		<h1>Rent</h1>
 		<div id="content"></div>
 	</div>
-<!--<script src="d3.min.js"></script>
-<script src="js/index_content.js"></script> -->
+<script src="d3.min.js"></script>
+<script src="js/index_content.js"></script>
 </body>
 </html>
