--- a/Test2/test/test.html
+++ b/Test2/test/test.html
@@ -1,8 +1,8 @@
 <!DocType HTML>
 <head>
 	<title>BHillSide Home</title>
-	<link rel="stylesheet" href="css/index_topbar.css" />
-	<link rel="stylesheet" href="css/index_content.css" />
+	<link rel="stylesheet" href="css/test_topbar.css" />
+	<link rel="stylesheet" href="css/test_content.css" />
 </head>
 <html>
 <body>
@@ -29,7 +29,6 @@
 	</div>
 	<div id="clearFloat"></div>
 	<div id="contentContainer">
-		<h1>Welcome to the BHillside Manor home page!</h1>
 		<div id="content"></div>
 	</div>
 </body>
