--- a/Test2/rent/rent.html
+++ b/Test2/rent/rent.html
@@ -1,8 +1,8 @@
 <!DocType HTML>
 <head>
 	<title>BHillSide Home</title>
-	<link rel="stylesheet" href="css/index_topbar.css" />
-	<link rel="stylesheet" href="css/index_content.css" />
+	<link rel="stylesheet" href="css/rent_topbar.css" />
+	<link rel="stylesheet" href="css/rent_content.css" />
 </head>
 <html>
 <body>
@@ -29,8 +29,10 @@
 	</div>
 	<div id="clearFloat"></div>
 	<div id="contentContainer">
-		<h1>Welcome to the BHillside Manor home page!</h1>
+		<h1>Rent</h1>
 		<div id="content"></div>
 	</div>
+<script src="d3.min.js"></script>
+<script src="js/rent_content.js"></script>
 </body>
 </html>
