--- a/Test2/z - template/index.html
+++ b/Test2/z - template/index.html
@@ -1,31 +1,35 @@
 <!DocType HTML>
 <head>
 	<title>BHillSide Home</title>
-	<link rel="stylesheet" href="css/TestPage1_topbar.css" />
-	<link rel="stylesheet" href="css/TestPage1_sidebar.css" />
-	<link rel="stylesheet" href="css/TestPage1_content.css" />
+	<link rel="stylesheet" href="css/index_topbar.css" />
+	<link rel="stylesheet" href="css/index_content.css" />
 </head>
 <html>
 <body>
 	<div id="topMenuBar">
+		<div id="color1"></div>
+		<div id="color2"></div>
+		<div id="color3"></div>
+		<div id="color4"></div>
+		<div id="break1"></div>
 		<div>
 			<div id="topLeftBox"><a href="http://192.168.1.5:8888/index.html">Home</a></div>
 			<ul>
-				<li><a href="http://192.168.1.5:8888/TestPage1.html">Item 1</a></li>
-				<li><a href="#Item2">Item 2</a></li>
+				<li><a href="http://192.168.1.5:8888/rent.html">Rent</a></li>
+				<li><a href="http://192.168.1.5:8888/test.html">Item 2</a></li>
+				<!--
 				<li><a href="#Item3">Item 3</a></li>
 				<li><a href="#Item4">Item 4</a></li>
 				<li><a href="#Item5">Item 5</a></li>
+				-->
 			</ul>
 			<div id="topRightBox"></div>
 		</div>
+		<div id="break2"></div>
 	</div>
 	<div id="clearFloat"></div>
-	<div id="sideBar"></div>
 	<div id="contentContainer">
 		<div id="content"></div>
 	</div>
-<!--<script src="d3.min.js"></script>
-<script src="js/index_content.js"></script> -->
 </body>
 </html>
